Bug fixes
Removed a undefined var

Made Scrollbar thicker

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -206,7 +206,7 @@
 
 /* width */
 ::-webkit-scrollbar {
-    width: 7px;
+    width: 10px;
     background: white;
 }
 
